# nanokernel

./: Makefile.am  Makefile.in  compile.sh  configure  configure.in
drivers/: Makefile.am  Makefile.in  driverdef.c
drivers/keyboard/: Makefile.am  Makefile.in  codepage.h  i8042.c  i8042.c.c  keyboard.c  stdin.c  stdin.h
include/: Makefile.am  Makefile.in  config.h.in  console.h  cpu.h  cpuinfo.h  driver.h  int.h  io.h  irq.h  kern.h  kernel.h  kerror.h  keyboard.h  loader.h  mem.h  memory.h  mempool.h  pic.h  screen.h  shell.h  types.h
include/fs/: file.h  vfs.h
include/std/: membase.h  print.h  stdarg.h  stdout.h  strings.h
include/utils/: list.h  membercast.h  tree.h
kernel/: Makefile.am  Makefile.in  console.c  cpuinfo.c  driver.c  kerror.c  keyboard.c  kmain.c  kmalloc.c  link.ld  mempool.c  pic.c  screen.c  shell.c
kernel/fs/: file.c  vfs.c
kernel/i386/: int.c  inthandlers.S  iobase.S  port.S  protmode.S  realmode.S  start.S  stop.S  version.S
kernel/i486/: cpu.S
kernel/std/: membase.c  print.c  stdout.c  strings.c
kernel/utils/: list.c  tree.c
loader/: Makefile.am  Makefile.in  boot.S  mbr.ld
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
tests/nanoTest/: kerror_mocked.c  kmalloc_mocked.c  kmalloc_test.c  main.c  print_mocked.c  vfs_test.c
tests/nanoTest/include/: kmalloc_test.h  vfs_test.h
tests/nanoTest/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
